prevent leaflet z-index issues

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -117,11 +117,11 @@ body .cupertino-pane-wrapper {
 		box-shadow: var(--cp-box-shadow);
 		width: min(500px, 100%);
 		position: absolute;
-		z-index: 777777;
+		// z-index: 777777;
 	}
 
 	.draggable {
-		z-index: 1;
+		// z-index: 1;
 		height: 60px;
 	}
 
@@ -144,7 +144,7 @@ body .cupertino-pane-wrapper {
 		position: absolute;
 		text-align: center;
 		padding: 10rem 0;
-		z-index: 77777;
+		// z-index: 77777;
 		background: rgba(255, 255, 255, .25);
 
 		svg {
@@ -173,7 +173,7 @@ body .cupertino-pane-wrapper {
 		.cploc-map {
 			&--locations--mode {
 				position: absolute;
-				z-index: 777999;
+				// z-index: 777999;
 				bottom: var(--cp-gap--large);
 				right: var(--cp-gap--large);
 				background: black;
@@ -278,7 +278,7 @@ body .cupertino-pane-wrapper {
 	}
 
 	&--controls {
-		z-index: 5555;
+		// z-index: 5555;
 		position: absolute;
 		left: var(--cpl-map-control-gap);
 		top: var(--cpl-map-control-gap);
@@ -301,7 +301,7 @@ body .cupertino-pane-wrapper {
 		left: 0;
 		bottom: 0;
 		width: 100%;
-		z-index: 777888;
+		// z-index: 777888;
 
 		&--footer {
 			margin: var(--cp-gap--large);
@@ -309,6 +309,13 @@ body .cupertino-pane-wrapper {
 			font-size: var(--cp-font-size--sm);
 		}
 	}
+}
+
+body .leaflet-container:after,
+.leaflet-pane,
+.leaflet-tile-pane,
+.leaflet-tile-container {
+	z-index: unset !important;
 }
 
 body .cploc-map-location {
